--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--[if !mso]><!-->
 <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
 <!--<![endif]-->
-<title>Cafel Result</title>
+<title>Result Capacitaciones: Como abordar la ansiedad en tiempos de pandemia</title>
 <!--[if !mso]><!-->
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" type="text/css"/>
