--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--[if !mso]><!-->
 <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
 <!--<![endif]-->
-<title>Result Capacitaciones: Como abordar la ansiedad en tiempos de pandemia</title>
+<title>Result Capacitaciones</title>
 <!--[if !mso]><!-->
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" type="text/css"/>
@@ -154,8 +154,9 @@
 
 
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGWX71jW053ixWOqppL8-u5xhK5r0siWSgZDWP61ObsTbyYg/viewform?embedded=true" width="640" height="490" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc7Qu3lSrpReMp-OC-vDu52QmzYQk9MrXR-EZqgHuGrF9Zdsg/viewform?embedded=true" width="640" height="490" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+	
+	
 <div style="background-color:#ffffff;">
 <div class="block-grid" style="Margin: 0 auto; min-width: 320px; max-width: 640px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: #ffffff;">
 <div style="border-collapse: collapse;display: table;width: 100%;background-color:#ffffff;">
